# gas-management-system

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FOLDER_STRUCTURE.md
legacy/: 6060 gas management system.docx  README.md  gas managent 1.py  main gas file 3.py  main gas file1.py  main gas file2.py  main gas.py
src/gas_management/: __init__.py  __main__.py  auth.py  branding.py  cli.py  config.py  exceptions.py  models.py  pricing.py  services.py  ui.py  validators.py
src/gas_management/db/: __init__.py  base.py  factory.py  mysql_repo.py  sqlite_repo.py
src/gas_management/web/: __init__.py  __main__.py  app.py  dependencies.py  security.py
src/gas_management/web/routers/: __init__.py  auth.py  billing.py  customers.py  dashboard.py
src/gas_management/web/static/css/: styles.css
src/gas_management/web/static/js/: app.js  theme.js
src/gas_management/web/templates/: _customers_table.html  base.html  billing.html  billing_result.html  customer_detail.html  customer_new.html  customers_list.html  dashboard.html  error.html  login.html  not_found.html
tests/: conftest.py  test_auth.py  test_pricing.py  test_repository.py  test_validators.py  test_web.py
