[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-management-system"
version = "1.1.0"
description = "A secure, modern terminal application for managing gas (CNG/LPG) customers, billing, and inventory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aashish Bharti", email = "aashish@marketdoctorsonline.com" }]
keywords = ["gas", "inventory", "management", "cli", "billing", "cng", "lpg", "sqlite", "mysql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
mysql = ["mysql-connector-python>=8.0.0"]
dotenv = ["python-dotenv>=1.0.0"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.urls]
Homepage = "https://github.com/aashishbharti04/gas-management-system"
Repository = "https://github.com/aashishbharti04/gas-management-system"
Issues = "https://github.com/aashishbharti04/gas-management-system/issues"
Changelog = "https://github.com/aashishbharti04/gas-management-system/blob/main/CHANGELOG.md"

[project.scripts]
gas-management = "gas_management.cli:main"
gas-management-web = "gas_management.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gas_management = [
    "py.typed",
    "web/templates/*.html",
    "web/static/*.svg",
    "web/static/css/*.css",
    "web/static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom uses function calls (Depends/Form) as
# argument defaults by design; B008 is a false positive for these modules.
"src/gas_management/web/routers/*.py" = ["B008"]

[tool.coverage.run]
source = ["gas_management"]
branch = true
